@@ -1076,7 +1076,6 @@ octave_base_value::get_umap_name (unary_mapper_t umap)
     "isupper",
     "isxdigit",
     "signbit",
-    "toascii",
     "tolower",
     "toupper"
   };
